--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:phantom": "webpack --config webpack.phantom.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,9 +18,14 @@
     "jimp": "^0.2.28",
     "jquery": "^3.2.1",
     "parse5": "^3.0.2",
-    "rxjs": "^5.4.2"
+    "rxjs": "^5.4.3"
   },
   "devDependencies": {
-    "download-image": "^1.0.1"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "download-image": "^1.0.1",
+    "webpack": "^3.6.0"
   }
 }
